--- a/less/global.less
+++ b/less/global.less
@@ -7,14 +7,26 @@ html {
   font-size: 62.5%;
 }
 
-html, body {
+html,
+body {
   font-family: 'Ubuntu', sans-serif;
   color: @main-font-color;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: 'Russo One', sans-serif;
   color: @header-font-color;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 4rem;
+  font-weight: bold;
+  margin-top: 3%;
 }
 
 h2 {
@@ -26,13 +38,15 @@ h3 {
 }
 
 p {
-  font-size: 1.6rem;
-  line-height: 1.4;
+  .font-styles();
+}
+
+a {
+  font-size: 1.9rem;
 }
 
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto;
 }
-
