--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,34 @@
 // Navigation code here
+
+.nav-bar {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: @nav-bg;
+    width: 100vw;
+    border: 1px solid @nav-border;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    width: 25%;
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+
+nav a {
+    text-decoration: none;
+    color: @nav-font;
+
+}
+
+@media @phone {
+
+    nav {
+        justify-content: space-evenly;
+        width: 100%;
+    }
+
+}
